[package]
name = "n8v_counter"
version = "0.1.0"
edition.workspace = true

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { version = "0.13.1", features = ["debug"] }
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { version = "0.13.1", features = [
  "debug",
  "wgpu",
  "tiny-skia",
  "webgl",
  "fira-sans",
] }
